[gd_scene load_steps=11 format=2]

[ext_resource path="res://Misc/Background/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Misc/Background/Background.tres" type="Shader" id=2]
[ext_resource path="res://Misc/Fonts/coolvetica rg.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Screens/Main/Main.gd" type="Script" id=4]
[ext_resource path="res://Screens/Main/Main.tres" type="Theme" id=5]
[ext_resource path="res://Screens/Options/Options.tscn" type="PackedScene" id=6]

[sub_resource type="OpenSimplexNoise" id=4]
octaves = 1
period = 103.9

[sub_resource type="NoiseTexture" id=5]
seamless = true
noise = SubResource( 4 )

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/colour1 = Color( 0.0745098, 0.196078, 0.0235294, 1 )
shader_param/colour2 = Color( 0.0313726, 0.0941176, 0.00784314, 1 )
shader_param/speed = 0.07
shader_param/noise = SubResource( 5 )

[sub_resource type="DynamicFont" id=11]
size = 32
outline_size = 4
outline_color = Color( 0.0313726, 0.0941176, 0.00784314, 1 )
extra_spacing_top = -20
font_data = ExtResource( 3 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Panel" parent="Background" index="0"]
material = SubResource( 6 )

[node name="Menu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = 175.0
margin_top = 81.0
margin_right = 336.0
margin_bottom = 218.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="Menu/VBoxContainer"]
margin_right = 161.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 11 )
text = "Ammunition
Alligator"
align = 2
valign = 1

[node name="Buttons" type="VBoxContainer" parent="Menu/VBoxContainer"]
margin_left = 30.0
margin_top = 51.0
margin_right = 130.0
margin_bottom = 137.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 4
alignment = 1

[node name="Play" type="Button" parent="Menu/VBoxContainer/Buttons"]
margin_right = 100.0
margin_bottom = 26.0
focus_mode = 0
enabled_focus_mode = 0
text = "Play"

[node name="Options" type="Button" parent="Menu/VBoxContainer/Buttons"]
margin_top = 30.0
margin_right = 100.0
margin_bottom = 56.0
focus_mode = 0
enabled_focus_mode = 0
text = "Options"

[node name="Quit" type="Button" parent="Menu/VBoxContainer/Buttons"]
margin_top = 60.0
margin_right = 100.0
margin_bottom = 86.0
focus_mode = 0
enabled_focus_mode = 0
text = "Quit"

[node name="Options" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="Menu/VBoxContainer/Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="done" from="Options" to="." method="_on_Options_done"]

[editable path="Background"]
